Add comprehensive genetics article on DNA sequencing and human migration
- Created a new HTML page titled "genetics.html" detailing the DNA sequencing revolution and its impact on understanding human history.
- Included sections on the history of DNA sequencing, major discoveries in genetic archaeology, and the significance of haplogroups in tracing human migration.
- Implemented structured data for SEO and accessibility features, including a skip link and breadcrumb navigation.
- Added interactive elements such as a migration timeline chart using Chart.js.
- Enhanced the page with engaging visuals, including SVG animations and a responsive layout.

--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,8 @@
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html">Lineage History</a>
-            <a href="#genetics">Genetics</a>
-            <a href="#culture">Culture</a>
+            <a href="genetics.html">Genetics</a>
+            <a href="culture.html">Culture</a>
             <a href="contact.html" class="active">Contact</a>
         </div>
     </nav>
