--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="nav-container">
             <a href="index.html" class="active">Home</a>
             <a href="lineage.html">Lineage History</a>
-            <a href="#genetics">Genetics</a>
-            <a href="#culture">Culture</a>
+            <a href="genetics.html">Genetics</a>
+            <a href="culture.html">Culture</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
@@ -380,6 +380,8 @@
             </p>
             <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-top: 2rem;">
                 <a href="lineage.html" class="btn">Complete Lineage Analysis</a>
+                <a href="genetics.html" class="btn">DNA Revolution Science</a>
+                <a href="culture.html" class="btn">Cultural Heritage</a>
                 <a href="contact.html" class="btn btn-outline">Contact Us for Research</a>
             </div>
         </section>
