--- a/lineage.html
+++ b/lineage.html
@@ -130,8 +130,8 @@
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html" class="active">Lineage History</a>
-            <a href="#genetics">Genetics</a>
-            <a href="#culture">Culture</a>
+            <a href="genetics.html">Genetics</a>
+            <a href="culture.html">Culture</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
