Update project details and integrate recent research findings for 2026

--- a/genetics.html
+++ b/genetics.html
@@ -53,7 +53,7 @@
         "name": "Amazigh Lineage Heritage Project"
       },
       "datePublished": "2025-10-28",
-      "dateModified": "2025-10-28",
+      "dateModified": "2026-01-17",
       "publisher": {
         "@type": "Organization",
         "name": "Amazigh Lineage Heritage"
@@ -159,12 +159,12 @@
                     <p><strong>Cost</strong><br>First human genome</p>
                 </div>
                 <div class="stat-card">
-                    <h3>⚡ 2025</h3>
-                    <p><strong>Minutes</strong><br>Modern sequencing time</p>
+                    <h3>⚡ 2026</h3>
+                    <p><strong>Minutes</strong><br>Modern whole genome sequencing</p>
                 </div>
                 <div class="stat-card">
-                    <h3>💵 $100</h3>
-                    <p><strong>Consumer cost</strong><br>DNA ancestry test</p>
+                    <h3>💵 $50-200</h3>
+                    <p><strong>Consumer cost</strong><br>DNA ancestry tests</p>
                 </div>
             </div>
         </section>
@@ -197,7 +197,7 @@
                 </div>
                 
                 <div class="evolution-step">
-                    <div class="evolution-year">2011-2020</div>
+                    <div class="evolution-year">2011-2024</div>
                     <div class="evolution-content">
                         <h3>📱 Consumer Revolution</h3>
                         <p><strong>Time:</strong> Days to hours</p>
@@ -294,6 +294,14 @@
                         <p><strong>Evidence:</strong> Comparative genomic analysis</p>
                         <p><strong>Revelation:</strong> Multiple waves of human migration from Africa</p>
                         <p><strong>Impact:</strong> Refined understanding of human dispersal</p>
+                    </div>
+                    
+                    <div class="discovery-card">
+                        <h4>🏛️ Ancient North African DNA (2023-2025)</h4>
+                        <p><strong>Location:</strong> Morocco, Tunisia, Algeria</p>
+                        <p><strong>Evidence:</strong> Ancient Iberomaurusian and Capsian culture samples</p>
+                        <p><strong>Revelation:</strong> Confirmed prehistoric Iberian-North African gene flow; refined H1 arrival to 10,000 years ago</p>
+                        <p><strong>Impact:</strong> Established North African population continuity and European maternal contributions</p>
                     </div>
                 </div>
             </div>
@@ -571,7 +579,7 @@
     </main>
 
     <footer role="contentinfo">
-        <p>&copy; 2025 Amazigh Lineage Heritage Project | <a href="contact.html">Contact</a> | Exploring human history through genetics</p>
+        <p>&copy; 2026 Amazigh Lineage Heritage Project | <a href="contact.html">Contact</a> | Exploring human history through genetics</p>
     </footer>
 
     <script>
