Refactor code structure for improved readability and maintainability

--- a/genetics.html
+++ b/genetics.html
@@ -124,27 +124,31 @@
     <main id="main-content" class="container" role="main">
         <!-- Introduction -->
         <section class="card hero-genetics">
-            <div class="dna-animation">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 80" class="floating-dna">
-                    <path d="M20 10 Q50 5 80 10 Q110 15 140 10 Q170 5 200 10" stroke="var(--primary-color)" stroke-width="3" fill="none">
-                        <animate attributeName="d" values="M20 10 Q50 5 80 10 Q110 15 140 10 Q170 5 200 10;M20 15 Q50 10 80 15 Q110 20 140 15 Q170 10 200 15;M20 10 Q50 5 80 10 Q110 15 140 10 Q170 5 200 10" dur="4s" repeatCount="indefinite"/>
-                    </path>
-                    <path d="M20 70 Q50 75 80 70 Q110 65 140 70 Q170 75 200 70" stroke="var(--secondary-color)" stroke-width="3" fill="none">
-                        <animate attributeName="d" values="M20 70 Q50 75 80 70 Q110 65 140 70 Q170 75 200 70;M20 65 Q50 70 80 65 Q110 60 140 65 Q170 70 200 65;M20 70 Q50 75 80 70 Q110 65 140 70 Q170 75 200 70" dur="4s" repeatCount="indefinite"/>
-                    </path>
-                    <!-- Base pairs -->
-                    <g stroke="rgba(17, 138, 178, 0.6)" stroke-width="1">
-                        <line x1="30" y1="15" x2="30" y2="65"/>
-                        <line x1="60" y1="8" x2="60" y2="72"/>
-                        <line x1="90" y1="12" x2="90" y2="68"/>
-                        <line x1="120" y1="17" x2="120" y2="63"/>
-                        <line x1="150" y1="12" x2="150" y2="68"/>
-                        <line x1="180" y1="8" x2="180" y2="72"/>
-                    </g>
-                </svg>
+            <!-- Genetics Lab Banner -->
+            <div style="margin: -2.5rem -2.5rem 2rem -2.5rem; height: 300px; position: relative; overflow: hidden; border-radius: 16px 16px 0 0;">
+                <!-- 
+                MIDJOURNEY PROMPT:
+                "Modern genetics laboratory, DNA sequencing machines, scientists in lab coats, blue ambient lighting, 
+                test tubes with glowing samples, high-tech equipment, professional scientific photography, 
+                clean aesthetic, depth of field, 8k detail --ar 21:9 --v 6"
+                
+                Replace with: <img src="img/sequencing-lab.jpg" alt="Genetics Laboratory" style="width: 100%; height: 100%; object-fit: cover;">
+                -->
+                <div style="width: 100%; height: 100%; background: linear-gradient(135deg, rgba(37, 99, 235, 0.9) 0%, rgba(139, 92, 246, 0.9) 100%); display: flex; align-items: center; justify-content: center;">
+                    <div style="color: white; text-align: center; padding: 2rem;">
+                        <div style="font-size: 3rem; margin-bottom: 1rem;">🧬</div>
+                        <h2 style="color: white; margin: 0;">The Genetic Revolution: Rewriting Human History</h2>
+                    </div>
+                </div>
             </div>
             
-            <h2>🧬 The Genetic Revolution: Rewriting Human History</h2>
+            <!-- Genetics Lab Banner -->
+            <div style="margin: -2.5rem -2.5rem 2rem -2.5rem; height: 300px; position: relative; overflow: hidden; border-radius: 16px 16px 0 0;">
+                <img src="img/sequencing-lab.jpg" alt="Modern Genetics Laboratory" style="width: 100%; height: 100%; object-fit: cover;">
+                <div style="position: absolute; bottom: 0; left: 0; right: 0; background: linear-gradient(to top, rgba(10, 37, 64, 0.95) 0%, transparent 100%); padding: 2rem;">
+                    <h2 style="color: white; margin: 0; font-size: 2rem; font-family: 'Space Grotesk', sans-serif;">🧬 The Genetic Revolution: Rewriting Human History</h2>
+                </div>
+            </div>
             <p class="text-large">
                 We live in an extraordinary era where a tiny sample of saliva can reveal stories spanning tens of thousands of years. The DNA sequencing revolution has transformed from a decade-long, billion-dollar project to a process completed in minutes, fundamentally changing how we understand human history, migration, and our interconnected past.
             </p>
