Add images and captions to enhance cultural and genetic content; remove unused image files

--- a/genetics.html
+++ b/genetics.html
@@ -342,6 +342,11 @@
                 Haplogroups are like genetic "surnames" inherited through generations, creating a molecular map of human migration. These genetic markers allow us to trace the journeys our ancestors took across continents and through time.
             </p>
             
+            <div class="image-container" style="margin: 2rem 0;">
+                <img src="img/genetic-tree.jpg" alt="Human Phylogenetic Tree - Global haplogroup distribution and migration patterns" style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; box-shadow: 0 8px 24px rgba(0,0,0,0.15);" loading="lazy">
+                <p class="image-caption">The human phylogenetic tree: Branching patterns of haplogroups showing ancient migrations across continents</p>
+            </div>
+            
             <div class="haplogroup-explanation">
                 <h3>What Are Haplogroups?</h3>
                 <div class="grid">
