--- a/lineage.html
+++ b/lineage.html
@@ -428,6 +428,11 @@ flowchart LR
                 The Souss region has a complex history, balancing tribal autonomy with the authority of central governments. This timeline highlights the political evolution that your ancestors experienced.
             </p>
             
+            <div class="image-container" style="margin: 2rem 0;">
+                <img src="img/migration-timeline.jpg" alt="Historical migration timeline - Human movements across North Africa and Mediterranean" style="width: 100%; height: 400px; object-fit: cover; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.15);" loading="lazy">
+                <p class="image-caption">Migration patterns and historical movements: Visual representation of population flows into and across North Africa</p>
+            </div>
+            
             <!-- Modern Clean Timeline -->
             <div style="position: relative; padding: 2rem 0;">
                 <!-- Timeline Line -->
