Update SEO meta tags and image attributes across multiple HTML files for improved search visibility and accessibility; standardize content descriptions and enhance internal linking structure.

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>Contact | Amazigh Lineage Heritage Research</title>
-    <meta name="description" content="Contact the Amazigh Lineage Heritage project for research inquiries, collaboration opportunities, or questions about Chtouka genealogy and North African ancestry.">
+    <title>Contact | Amazigh Heritage Research</title>
+    <meta name="description" content="Contact for research inquiries, collaboration, or questions about Chtouka genealogy and North African ancestry. Connect with heritage researchers.">
     <meta name="keywords" content="Amazigh research contact, Berber genetics inquiry, Chtouka genealogy questions, North African ancestry research, genetic genealogy collaboration">
     <meta name="author" content="Amazigh Lineage Heritage Project">
     <meta name="robots" content="index, follow">
