--- a/gemeni-infograph.html
+++ b/gemeni-infograph.html
@@ -129,7 +129,7 @@
                         </div>
                         <div class="flow-arrow">&rarr;</div>
                         <div class="flex flex-col items-center p-2">
-                            <span class="text-xs font-semibold text-gray-500">~500 BCE</span>
+                            <span class="text-xs font-semibold text-gray-500">~400 BCE</span>
                             <div class="bg-gray-100 p-4 rounded-xl shadow-inner">
                                 <h4 class="text-lg font-bold text-[#073B4C]">E-PF2546</h4>
                                 <p class="text-sm">Branch forms</p>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <p class="text-gray-700 mt-6">
-                        While your root haplogroup E-M81 is ancient and defines the indigenous North African population, your specific subclade E-PF2546 is much younger, with an estimated origin around 500 BCE. The 17 private variants indicate your lineage is a unique and recent branch, likely originating and remaining within the Souss-Massa region.
+                        While your root haplogroup E-M81 is ancient and defines the indigenous North African population, your specific subclade E-PF2546 is much younger, with an estimated origin around 400 BCE (2,400 years before present) based on 2025 whole-genome studies. The 17 private variants indicate your lineage is a unique and recent branch, likely originating and remaining within the Souss-Massa region.
                     </p>
                 </div>
             </div>
