Refine layout and styling for improved readability and user experience; update meta tag character limits for SEO optimization; enhance card and filter section designs for better usability.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>Amazigh DNA Heritage | E-PF2546 & H1 Research | Chtouka</title>
+    <title>Amazigh DNA Heritage | E-PF2546 & H1 Research</title>
     <meta name="description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (400 BCE) and H1 mtDNA (10,000 years) from Souss-Massa, Morocco. Explore 11,000 years of heritage.">
     <meta name="keywords" content="Amazigh DNA, Berber genetics, Chtouka tribe, Souss-Massa heritage, E-PF2546, H1 haplogroup, Morocco genealogy, North African ancestry, Tachelhit culture, Argan ecosystem">
     <meta name="author" content="Amazigh Lineage Heritage Project">
@@ -19,7 +19,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="Amazigh DNA Heritage | E-PF2546 & H1 Research | Chtouka">
+    <meta property="og:title" content="Amazigh DNA Heritage | E-PF2546 & H1 Research">
     <meta property="og:description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (400 BCE) and H1 mtDNA (10,000 years) from Souss-Massa, Morocco. Explore 11,000 years of heritage.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
@@ -31,7 +31,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Amazigh Lineage Heritage | Chtouka DNA Research & Souss-Massa History">
+    <meta name="twitter:title" content="Amazigh DNA Heritage | E-PF2546 & H1 Research">
     <meta name="twitter:description" content="Comprehensive genetic and historical analysis of Amazigh Chtouka lineage from Souss-Massa, Morocco. Explore ancient E-PF2546 and H1 lineages.">
     <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
     <meta name="twitter:image:alt" content="Amazigh Genetic Heritage - E-M81 Distribution Map">
