--- a/lineage.html
+++ b/lineage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>Amazigh Lineage Analysis | E-PF2546 & H1 DNA Research</title>
+    <title>Amazigh Lineage | E-PF2546 & H1 DNA Research</title>
     <meta name="description" content="Genetic analysis of Amazigh Chtouka: E-PF2546 Y-DNA (400 BCE) and H1-T16189C mtDNA (10,000 years). Souss-Massa history, Tachelhit culture, and prehistoric migrations.">
     <meta name="keywords" content="E-PF2546 haplogroup, H1-T16189C mtDNA, Amazigh genetics research, Berber DNA analysis, Chtouka tribe history, Souss-Massa genealogy, North African ancestry, European migration, Iron Age Morocco, Neolithic genetics, Tachelhit language, Argan culture">
     <meta name="author" content="Amazigh Lineage Heritage Project">
@@ -23,7 +23,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="Amazigh Lineage Analysis | E-PF2546 & H1 DNA Research">
+    <meta property="og:title" content="Amazigh Lineage | E-PF2546 & H1 DNA Research">
     <meta property="og:description" content="Genetic analysis of Amazigh Chtouka: E-PF2546 Y-DNA (400 BCE) and H1-T16189C mtDNA (10,000 years). Souss-Massa history and prehistoric migrations.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/lineage.html">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
@@ -34,7 +34,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Complete Amazigh Lineage Analysis | E-PF2546 & H1 Genetic Research">
+    <meta name="twitter:title" content="Amazigh Lineage | E-PF2546 & H1 DNA Research">
     <meta name="twitter:description" content="In-depth genetic analysis of Chtouka lineage: E-PF2546 (Iron Age) and H1 (Neolithic) haplogroups spanning 11,000 years of heritage.">
     <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
     <meta name="twitter:image:alt" content="E-PF2546 Haplogroup Distribution - Amazigh Genetic Analysis">
