Add Google Search Console verification file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Google Search Console Verification -->
+    <!-- TODO: Add your Google verification meta tag here after adding property in Search Console -->
+    <!-- Example: <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" /> -->
+    
     <!-- SEO Meta Tags -->
     <title>Amazigh DNA Heritage | E-PF2546 & H1 Research</title>
     <meta name="description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (400 BCE) and H1 mtDNA (10,000 years) from Souss-Massa, Morocco. Explore 11,000 years of heritage.">
