feat(docs): update latest research and references in README

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <!-- SEO Meta Tags -->
     <title>Amazigh DNA Heritage | E-PF2546 & H1 Research</title>
-    <meta name="description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (400 BCE) and H1 mtDNA (10,000 years) from Souss-Massa, Morocco. Explore 11,000 years of heritage.">
+    <meta name="description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (~300 BCE) and H1 mtDNA (~11,400 years) from Souss-Massa, Morocco. Research-backed heritage.">
     <meta name="keywords" content="Amazigh DNA, Berber genetics, Chtouka tribe, Souss-Massa heritage, E-PF2546, H1 haplogroup, Morocco genealogy, North African ancestry, Tachelhit culture, Argan ecosystem">
     <meta name="author" content="Amazigh Lineage Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
     <meta property="og:title" content="Amazigh DNA Heritage | E-PF2546 & H1 Research">
-    <meta property="og:description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (400 BCE) and H1 mtDNA (10,000 years) from Souss-Massa, Morocco. Explore 11,000 years of heritage.">
+    <meta property="og:description" content="Genetic analysis of Amazigh Chtouka lineage: E-PF2546 Y-DNA (~300 BCE) and H1 mtDNA (~11,400 years) from Souss-Massa, Morocco. Research-backed heritage.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
     <meta property="og:image:width" content="1200">
@@ -125,7 +125,7 @@
           "name": "What is the E-PF2546 haplogroup?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "E-PF2546 is a Y-DNA haplogroup subclade of E-M81, the 'Berber marker' that defines indigenous North African Amazigh populations. E-PF2546 formed around 400 BCE (2,400 years ago) during the Iron Age, coinciding with the height of Mauretanian kingdoms and Carthaginian influence in North Africa."
+            "text": "E-PF2546 is a Y-DNA haplogroup subclade of E-M81, the 'Berber marker' that defines indigenous North African Amazigh populations. E-PF2546 formed approximately 2,300 years ago (~300 BCE) per the YFull YTree database, during the Iron Age. Its parent clade E-M81 underwent a rapid demographic expansion with a TMRCA debated between ~2,000-4,200 years ago (D'Atanasio et al. 2018)."
           }
         },
         {
@@ -133,7 +133,7 @@
           "name": "How did H1 mtDNA arrive in North Africa?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "H1 mtDNA arrived in North Africa approximately 10,000 years ago during the Early Neolithic period. Women carrying H1 migrated from the Franco-Cantabrian refuge (Iberia) across the Strait of Gibraltar during the African Humid Period, integrating with local Amazigh populations through female-mediated gene flow."
+            "text": "H1 mtDNA arrived in North Africa approximately 11,400 years ago (range: ~9,000-13,700 ya) during the Early Holocene, as estimated by Ottoni et al. (2010, PLOS ONE). Women carrying H1 migrated from the Franco-Cantabrian refuge (Iberia) across the Strait of Gibraltar, integrating with local Amazigh populations through female-mediated gene flow. This has been confirmed by Villalba-Mouco et al. (2023, Nature) via ancient DNA from Neolithic Morocco."
           }
         },
         {
@@ -302,15 +302,15 @@
                 <div class="card interactive-card" style="border-left: 4px solid var(--primary-color);">
                     <h3>🧬 Paternal Line: <a href="lineage.html#paternal" style="color: inherit; text-decoration: underline;">E-PF2546</a></h3>
                     <p><strong>Origin:</strong> Indigenous North African (Amazigh)</p>
-                    <p><strong>Age:</strong> ~2,400 years (400 BCE formation)</p>
-                    <p><strong>Story:</strong> A lineage that expanded dramatically across the Maghreb during the Iron Age (~500-300 BCE), coinciding with the rise of the Mauritanian kingdoms and becoming the defining Y-chromosome of the <a href="culture.html">Berber people</a>.</p>
+                    <p><strong>Age:</strong> ~2,300 years (~300 BCE formation per YFull)</p>
+                    <p><strong>Story:</strong> A lineage that expanded dramatically across the Maghreb during the Iron Age, coinciding with the rise of the Mauritanian kingdoms and becoming the defining Y-chromosome of the <a href="culture.html">Berber people</a>. Whole Y-chromosome analysis (D'Atanasio et al. 2018) revealed the parent E-M81 clade underwent a surprisingly recent expansion.</p>
                 </div>
                 
                 <div class="card interactive-card" style="border-left: 4px solid var(--secondary-color);">
                     <h3>🧬 Maternal Line: <a href="lineage.html#maternal" style="color: inherit; text-decoration: underline;">H1-T16189C!</a></h3>
                     <p><strong>Origin:</strong> Prehistoric European migration via Gibraltar</p>
-                    <p><strong>Age:</strong> ~10,000 years in North Africa (Early Neolithic, ~8,000 BCE)</p>
-                    <p><strong>Story:</strong> A maternal lineage that crossed from Iberia during the early Holocene climatic optimum (~10,000 years ago), part of the first <a href="genetics.html">Neolithic farmer migrations</a>, becoming deeply embedded in the North African gene pool and evolving local North African subclades.</p>
+                    <p><strong>Age:</strong> ~11,400 years in North Africa (Early Holocene; Ottoni et al. 2010)</p>
+                    <p><strong>Story:</strong> A maternal lineage that crossed from Iberia during the early Holocene climatic optimum, part of the first <a href="genetics.html">Neolithic farmer migrations</a> confirmed by ancient DNA (Villalba-Mouco et al. 2023, <em>Nature</em>), becoming deeply embedded in the North African gene pool and evolving local subclades (H1v, H1w, H1x).</p>
                 </div>
             </div>
 
@@ -339,11 +339,12 @@
                 <div style="display: flex; align-items: start; gap: 1rem;">
                     <div style="font-size: 1.5rem; flex-shrink: 0;">🔬</div>
                     <div>
-                        <h3 style="margin: 0 0 0.75rem 0; font-size: 1.1rem; color: #3E2723; font-weight: 700;">Latest Research Updates (January 2026)</h3>
+                        <h3 style="margin: 0 0 0.75rem 0; font-size: 1.1rem; color: #3E2723; font-weight: 700;">Latest Research Updates (February 2026)</h3>
                         <div style="font-size: 0.95rem; line-height: 1.7; color: #4B5563;">
-                            <p style="margin: 0 0 0.5rem 0;"><strong style="color: #CD7F32;">New precision dating from 2025 whole-genome studies:</strong> E-PF2546 formation refined to 2,400 years BP (400 BCE).</p>
-                            <p style="margin: 0 0 0.5rem 0;"><strong style="color: #CD7F32;">Ancient DNA breakthroughs:</strong> Recent Iberomaurusian samples confirm H1 arrival ~10,000 years ago during the African Humid Period.</p>
-                            <p style="margin: 0;"><strong style="color: #CD7F32;">Technological advances:</strong> Consumer genomics now offers $50-200 tests with results in hours.</p>
+                            <p style="margin: 0 0 0.5rem 0;"><strong style="color: #CD7F32;">E-M81 re-dated:</strong> D'Atanasio et al. (2018, <em>Scientific Reports</em>) revealed a surprisingly recent TMRCA of ~2,000-3,000 years ago using whole Y-chromosome sequencing. E-PF2546 formation estimated at ~2,300 years BP per YFull.</p>
+                            <p style="margin: 0 0 0.5rem 0;"><strong style="color: #CD7F32;">Ancient DNA breakthroughs:</strong> Villalba-Mouco et al. (2023, <em>Nature</em>) confirmed Iberian Neolithic migrants reached Morocco. Salem et al. (2025, <em>Nature</em>) revealed ancestral Green Sahara lineages from ~7,000 ya in Libya.</p>
+                            <p style="margin: 0 0 0.5rem 0;"><strong style="color: #CD7F32;">H1 mtDNA confirmed:</strong> Colombo et al. (2025, <em>Scientific Reports</em>) surveyed 733 modern and 43 ancient mitogenomes, confirming North African-specific H1 subclades (H1v, H1w, H1x).</p>
+                            <p style="margin: 0;"><strong style="color: #CD7F32;">Technological advances:</strong> Consumer ancestry tests from ~$50-100; institutional whole-genome sequencing at ~$200/genome.</p>
                         </div>
                     </div>
                 </div>
@@ -361,12 +362,12 @@
                     <tr>
                         <td><strong>Paternal Y-DNA</strong></td>
                         <td>E-PF2546</td>
-                        <td>Ancient Amazigh "Berber marker" with Iron Age expansion (~2,400 years ago)</td>
+                        <td>Ancient Amazigh "Berber marker" with Iron Age expansion (~2,300 years ago per YFull; parent E-M81 TMRCA debated at ~2,000-4,200 ya)</td>
                     </tr>
                     <tr>
                         <td><strong>Maternal mtDNA</strong></td>
                         <td>H1-T16189C!</td>
-                        <td>Prehistoric European lineage, Early Neolithic arrival (~10,000 years ago)</td>
+                        <td>Prehistoric European lineage, Early Holocene arrival (~11,400 years ago; Ottoni et al. 2010)</td>
                     </tr>
                     <tr>
                         <td><strong>Autosomal DNA</strong></td>
@@ -396,8 +397,8 @@
                     <div style="display: grid; grid-template-columns: 1fr auto 1fr; gap: 2rem; align-items: center;">
                         <div style="text-align: right;">
                             <div style="background: #FFF; border: 2px solid #CD7F32; padding: 1.5rem; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                                <div style="font-family: 'Space Grotesk', sans-serif; font-weight: 700; color: #CD7F32; font-size: 1.1rem; margin-bottom: 0.5rem;">~11,000 years ago</div>
-                                <div style="font-size: 0.95rem; color: #4B5563; line-height: 1.6;">Maternal H1 lineage arrives from Iberia during early Holocene migrations</div>
+                                <div style="font-family: 'Space Grotesk', sans-serif; font-weight: 700; color: #CD7F32; font-size: 1.1rem; margin-bottom: 0.5rem;">~11,400 years ago</div>
+                                <div style="font-size: 0.95rem; color: #4B5563; line-height: 1.6;">Maternal H1 lineage arrives from Iberia during early Holocene migrations (Ottoni et al. 2010)</div>
                             </div>
                         </div>
                         <div style="width: 20px; height: 20px; background: #CD7F32; border: 4px solid #FFF; border-radius: 50%; box-shadow: 0 0 0 2px #CD7F32; z-index: 2;"></div>
@@ -410,8 +411,8 @@
                         <div style="width: 20px; height: 20px; background: #CC8E35; border: 4px solid #FFF; border-radius: 50%; box-shadow: 0 0 0 2px #CC8E35; z-index: 2;"></div>
                         <div style="text-align: left;">
                             <div style="background: #FFF; border: 2px solid #CC8E35; padding: 1.5rem; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                                <div style="font-family: 'Space Grotesk', sans-serif; font-weight: 700; color: #CC8E35; font-size: 1.1rem; margin-bottom: 0.5rem;">~2,400 years ago (~400 BCE)</div>
-                                <div style="font-size: 0.95rem; color: #4B5563; line-height: 1.6;">Paternal E-PF2546 lineage forms during height of Mauretanian kingdoms and Carthaginian era</div>
+                                <div style="font-family: 'Space Grotesk', sans-serif; font-weight: 700; color: #CC8E35; font-size: 1.1rem; margin-bottom: 0.5rem;">~2,300 years ago (~300 BCE)</div>
+                                <div style="font-size: 0.95rem; color: #4B5563; line-height: 1.6;">Paternal E-PF2546 lineage forms during height of Mauretanian kingdoms and Carthaginian era (YFull YTree)</div>
                             </div>
                         </div>
                     </div>
