--- a/culture.html
+++ b/culture.html
@@ -53,7 +53,7 @@
         "name": "Amazigh Lineage Heritage Project"
       },
       "datePublished": "2025-10-28",
-      "dateModified": "2026-01-17",
+      "dateModified": "2026-02-13",
       "publisher": {
         "@type": "Organization",
         "name": "Amazigh Lineage Heritage"
@@ -310,7 +310,7 @@
                 <div class="language-stats">
                     <h3>📊 Language Vitality</h3>
                     <ul>
-                        <li><strong>Speakers:</strong> ~3.5 million native speakers</li>
+                        <li><strong>Speakers:</strong> ~5 million native speakers (14.2% of Morocco's population per 2024 census)</li>
                         <li><strong>Geographic Range:</strong> Souss-Massa-Drâa region</li>
                         <li><strong>Language Family:</strong> Afroasiatic > Berber > Atlas</li>
                         <li><strong>Writing System:</strong> Tifinagh, Arabic, Latin scripts</li>
@@ -969,8 +969,8 @@
                             {
                                 label: 'Global Fusion',
                                 data: [0, 0, 5, 20],
-                                backgroundColor: 'rgba(17, 138, 178, 0.8)',
-                                borderColor: '#118AB2',
+                                backgroundColor: 'rgba(210, 105, 30, 0.8)',
+                                borderColor: '#D2691E',
                                 borderWidth: 2
                             }
                         ]
