add research section

--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,7 @@
             <a href="lineage.html">Lineage History</a>
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
+            <a href="research.html">Research</a>
             <a href="contact.html" class="active">Contact</a>
         </div>
     </nav>
