--- a/culture.html
+++ b/culture.html
@@ -101,6 +101,7 @@
             <a href="lineage.html">Lineage History</a>
             <a href="genetics.html">Genetics</a>
             <a href="culture.html" class="active">Culture</a>
+            <a href="research.html">Research</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
