--- a/genetics.html
+++ b/genetics.html
@@ -101,6 +101,7 @@
             <a href="lineage.html">Lineage History</a>
             <a href="genetics.html" class="active">Genetics</a>
             <a href="culture.html">Culture</a>
+            <a href="research.html">Research</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
