--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <a href="lineage.html">Lineage History</a>
             <a href="genetics.html">Genetics</a>
             <a href="culture.html">Culture</a>
+            <a href="research.html">Research</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
